# sparse_solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  makefile  tests.cpp
data/: s_mediumL.mtx  s_mediumb.mtx  s_mediumx.mtx  s_smallL.mtx  s_smallb.mtx  s_smallx.mtx  s_torsob.mtx  s_torsox.mtx  s_tsopfb.mtx  s_tsopfx.mtx  smallL.mtx  smallb.mtx  sol_s_medium  sol_s_small  torsob.mtx  tsopfb.mtx
instructions/: README.md
julia/: triangular.jl
papers/: README.md
report/: report.tex
scripts/: codegen.ipynb  cond.m  medium_all  plots.ipynb  torso  torso_O0  triangular.jl  triangular.m  tsopf_O0
src/: codegen_medium.cpp  codegen_small.cpp  codegen_torso.cpp  codegen_tsopf.cpp  eigen.h  formats.h  graph.h  minitrace.cpp  mmio.cpp  mmio.h  multiply.cpp  multiply.h  naive.cpp  naive.h  triangular.cpp  triangular.h  utils.h
